2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.addin.xml: Bump MD version.

2008-10-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components/MenuButton.cs: Don't attach a StateChanged
	event handler from a variable, because GTK# explodes. Instead of the
	attach/remove, use a flag and an override.

2008-09-16  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.Components.DockToolbars/FixedPanel.cs:
	Clone the widgets in Forall since the callback call do things like
	removing the widget from the container which will invalidate the
	ArrayList enumerator.  Based on a patch provided by David Anes.

2008-09-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Components.mdp,
	  MonoDevelop.Components.Commands/Command.cs,
	  MonoDevelop.Components.Commands/ICommandUpdateHandler.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs: Added support
	  for custom command handlers, which can intercept the executon of
	  commands.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Components.mdp,
	  MonoDevelop.Components.Commands/IMultiCastCommandRouter.cs,
	  MonoDevelop.Components.Commands/ICommandUpdateHandler.cs,
	  MonoDevelop.Components.Commands/CommandArrayInfo.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs,
	  MonoDevelop.Components.Commands/CustomCommandUpdaterAttribute.cs:
	  Add support for multicast command dispatching. Added support for
	  custom command update handlers.
	* MonoDevelop.Components.Commands/CommandCheckMenuItem.cs,
	  MonoDevelop.Components.Commands/CommandInfo.cs: Added property for
	  setting a checkbox menu item as inconsistent.

2008-08-06  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Components.Commands/MenuToolButton.cs: Show a down arrow
	  if there's no icon.

2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.DockToolbars/DockToolbar.cs: Don't crash if